--- a/index.html
+++ b/index.html
@@ -1126,8 +1126,8 @@
             <div class="help-content">
                 <div class="help-section">
                     <h3><i class="fas fa-link"></i> Перекрестные ссылки</h3>
-                    <p>Используйте двойные квадратные скобки для создания ссылок между заметками:</p>
-                    <pre>[[Название заметки]]</pre>
+                    <p>чтобы связать зацепки [[Название зацепки]]</p>
+                    <pre>[[Название зацепки]]</pre>
                     <p>Ссылки будут автоматически преобразованы в кликабельные ссылки.</p>
                 </div>
                 
@@ -1271,7 +1271,7 @@
 
 Это ваша первая заметка в системе Осинтан — простом и мощном инструменте для создания заметок с перекрестными ссылками.
 
-## 🚀 Основные возможности:
+##  Основные возможности:
 
 1. **Создание заметок** - просто начните писать
 2. **Перекрестные ссылки** - используйте [[двойные скобки]] для ссылок между заметками
@@ -1279,7 +1279,7 @@
 4. **Граф связей** - визуализируйте связи между заметками
 5. **Поиск** - быстро находите нужную информацию
 
-## 🖱️ Как работать с графом:
+##  Как работать с графом:
 
 - **Кликните на узел** - чтобы открыть заметку
 - **Зажмите ЛКМ на узле** - чтобы перетащить его
@@ -1287,7 +1287,7 @@
 - **Прокрутка колесика** - чтобы приближать/отдалять
 - **Двойной клик** - центрировать граф
 
-## 🔗 Пример использования ссылок:
+##  Пример использования ссылок:
 
 Создайте новую заметку с названием "Мои идеи", а затем ссылайтесь на нее так: [[Мои идеи]]
 
@@ -1302,25 +1302,25 @@
                     {
                         id: '2',
                         title: 'Вторая заметка',
-                        content: `# Вторая заметка 📝
+                        content: `# Вторая заметка 
 
 Эта заметка связана с [[Добро пожаловать в Осинтан]].
 
-## 🔗 Связи между заметками
+##  Связи между заметками
 
 Когда вы используете [[двойные скобки]], система автоматически создает связи между заметками. Это помогает создавать сеть знаний и легко находить связанную информацию.
 
-## 🖱️ Перетаскивание узлов в графе
+##  Перетаскивание узлов в графе
 
 Теперь вы можете перетаскивать узлы в графе! Просто зажмите левую кнопку мыши на узле и перемещайте его. Позиции сохраняются автоматически.
 
-## 🏷️ Теги
+##  Теги
 
 Вы можете добавлять теги к заметкам: #пример #тестирование #осинтан
 
 Теги помогают организовывать заметки по темам и категориям.
 
-## 💡 Идеи для использования
+##  Идеи для использования
 
 - Вести конспекты книг и статей
 - Планировать проекты и задачи
@@ -1719,21 +1719,21 @@
                 
                 const template = `# ${dateStr}
 
-## 📝 План на сегодня
+## План на сегодня
 - [ ] 
 - [ ] 
 - [ ] 
 
-## 💡 Идеи и мысли
+##  Идеи и мысли
 - 
 
-## ✅ Выполнено
+##  Выполнено
 - 
 
-## 📌 Задачи на завтра
+##  Задачи на завтра
 - 
 
-## 💭 Размышления
+##  Размышления
 `;
 
                 const newNote = {
